<resources>
    <string name="app_name">JaseInvaders</string>
    <string name="start_button">Start</string>
    <string name="math_question">1 + 1 =</string>
    <string name="answer_hint">ANSWER HERE…</string>
    <string name="turret_description">turret</string>
    <string name="invader_health">Invader Health</string>
    <string name="fire_button">FIRE</string>
    <string name="current_time">0 Seconds</string>
    <string name="leader_board">Leader Board</string>
    <string name="settings">Settings</string>
    <string name="difficulty_easy">EASY MODE</string>
    <string name="sound_on">Sound: on</string>
    <string name="sound_off">Sound: off</string>
    <string name="share">Share</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="music_on">Music: on</string>
    <string name="music_off">Music: off</string>
    <string name="popup_text">Share your personal best?</string>
    <string name="high_scores">High Scores</string>
    <string name="ufo_boss">ufo boss</string>
    <string name="jason_description">Jason Image</string>
    <string name="space_background">space background</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_one">Change your name in SETTINGS.</string>
    <string name="instructions_two">Click START. Answer the maths question in the ANSWER box and click FIRE.</string>
    <string name="instructions_three">Shake your device to skip a question, or to move to the next question.</string>
    <string name="instructions_1">1)</string>
    <string name="instructions_2">2)</string>
    <string name="instructions_3">3)</string>
</resources>