<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_background"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/gameMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/questionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:padding="10dp"
            android:text="@string/math_question"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:hint="@string/answer_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/turretView"
        android:layout_width="108dp"
        android:layout_height="123dp"
        android:contentDescription="@string/turret_description"
        app:layout_constraintBottom_toTopOf="@+id/gameMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/turret"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/fireView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/fire_button_description"
        android:onClick="onFirePressed"
        app:layout_constraintBottom_toTopOf="@+id/gameMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fire_button"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/invaderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invader_health"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:progress="100"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>